[tool.poetry]
name = "adsb-extract"
version = "0.1.0"
description = ""
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^15.0.2"
lonboard = "^0.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
